--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "build-lib": "vite build --mode library",
+    "build-lib": "vite build --mode library && tsc --emitDeclarationOnly --outDir dist",
     "prepublishOnly": "npm run build-lib"
   },
   "keywords": [
@@ -17,10 +17,21 @@
     "editor",
     "modal",
     "todo",
-    "form"
+    "form",
+    "typescript",
+    "component",
+    "ui"
   ],
-  "author": "Your Name",
+  "author": "Marco Furrer",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MarcoFurrer/editor.git"
+  },
+  "homepage": "https://github.com/MarcoFurrer/editor#readme",
+  "bugs": {
+    "url": "https://github.com/MarcoFurrer/editor/issues"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
